--- a/RTK/delivery.html
+++ b/RTK/delivery.html
@@ -100,7 +100,7 @@
       <div class="main-banner section-main__banner">
         <h1 class="title-1 main-banner__title">Информация о доставке в ваш регион</h1>
       </div>
-      <p class="section-main__text">SIA Baltic Wood Trade выполняет доставку в сотрудничестве с лучшими логистическими партнерами по всей Европе. Мы обеспечиваем доставку продукции от производства до адреса клиента. Клиентам мы сообщаем планируемое время доставки и обеспечиваем быструю и качественную выгрузку товара по договоренности. 
+      <p class="section-main__text">SIA "RTK TIMBER" выполняет доставку в сотрудничестве с лучшими логистическими партнерами по всей Европе. Мы обеспечиваем доставку продукции от производства до адреса клиента. Клиентам мы сообщаем планируемое время доставки и обеспечиваем быструю и качественную выгрузку товара по договоренности. 
       </p>
       <p class="section-main__text text-green text-bold">Предлагаем разные варианты упаковки продуктов согласно пожеланиям клиентов.</p>
     </section>
@@ -181,7 +181,7 @@
   <footer class="footer">
     <div>
       <h2 class="title-1 footer__title">Выдающееся качество</h2>
-      <p class="footer__text">Компания SIA Baltic Wood Trade сертифицирована ENplus® A1/A2 и в соответствии со стандартами цепочки поставок FSC® и PEFC™
+      <p class="footer__text">Компания SIA "RTK TIMBER" сертифицирована ENplus® A1/A2 и в соответствии со стандартами цепочки поставок FSC® и PEFC™
       </p>
       <div class="footer__contacts">
         <!-- <div class="footer__contact">
