--- a/RTK/cooperation.html
+++ b/RTK/cooperation.html
@@ -263,7 +263,7 @@
   <footer class="footer">
     <div>
       <h2 class="title-1 footer__title">Выдающееся качество</h2>
-      <p class="footer__text">Компания SIA Baltic Wood Trade сертифицирована ENplus® A1/A2 и в соответствии со стандартами цепочки поставок FSC® и PEFC™
+      <p class="footer__text">Компания SIA "RTK TIMBER" сертифицирована ENplus® A1/A2 и в соответствии со стандартами цепочки поставок FSC® и PEFC™
       </p>
       <div class="footer__contacts">
         <!-- <div class="footer__contact">
