--- a/RTK/cooperation.html
+++ b/RTK/cooperation.html
@@ -263,7 +263,7 @@
   <footer class="footer">
     <div>
       <h2 class="title-1 footer__title">Выдающееся качество</h2>
-      <p class="footer__text">Компания SIA "RTK TIMBER" сертифицирована ENplus® A1/A2 и в соответствии со стандартами цепочки поставок FSC® и PEFC™
+      <p class="footer__text">Компания SIA Baltic Wood Trade сертифицирована ENplus® A1
       </p>
       <div class="footer__contacts">
         <!-- <div class="footer__contact">
@@ -298,10 +298,10 @@
     </div>
     <div class="footer__right-wrapper">
       <div class="footer__right">
-        <img src="images/certificate/certificate-4.png" alt="сертификат 4">
-        <img src="images/certificate/certificate-3.png" alt="сертификат 3">
+        <!--<img src="images/certificate/certificate-4.png" alt="сертификат 4">-->
+        <!--<img src="images/certificate/certificate-3.png" alt="сертификат 3">-->
         <img src="images/certificate/certificate-2.png" alt="сертификат 2">
-        <img src="images/certificate/certificate-1.png" alt="сертификат 1">
+        <!-- <img src="images/certificate/certificate-1.png" alt="сертификат 1"> -->
       </div>
     </div>
   </footer>
