--- a/RTK/about.html
+++ b/RTK/about.html
@@ -104,9 +104,9 @@
         <div class="section-main__content-left">
           <img class="section-main__content-main-image" src="images/about-1.png" alt="Брёвна в лесу">
           <div class="section-main__content-images">
-            <img class="section-main__content-image" src="images/about-2.png" alt="Кактус на столе">
-            <img class="section-main__content-image" src="images/about-3.png" alt="Дервео">
-            <img class="section-main__content-image" src="images/about-4.png" alt="Лес">
+            <img class="section-main__content-image" src="images/products/photo2.jpg" alt="Кактус на столе">
+            <img class="section-main__content-image" src="images/products/photo6.jpg" alt="Дервео">
+            <img class="section-main__content-image" src="images/products/photo4.jpg" alt="Лес">
           </div>
         </div>
         <div class="section-main__content-right">
