--- a/RTK/index.html
+++ b/RTK/index.html
@@ -133,7 +133,7 @@
                     <h4>1050 kg</h4>
                   </div>
                 </div>
-                <div class="products_list-item-mid-item">
+                <!-- <div class="products_list-item-mid-item">
                   <img src="images/icons/dial-svgrepo-com.svg" alt="">
   
                   <div class="products_list-item-mid-item-text">
@@ -148,9 +148,9 @@
                     <p>Bags 70 x 15 kg</p>
                     <h4>1050 kg</h4>
                   </div>
-                </div>
+                </div> -->
               </div>
-              <div class="products_list-item-mid-right">
+              <!-- <div class="products_list-item-mid-right">
                 <div class="products_list-item-mid-item">
                   <img src="images/icons/dial-svgrepo-com.svg" alt="">
   
@@ -175,7 +175,7 @@
                     <h4>1050 kg</h4>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
             <!-- <div class="products_list-item-bot">
               <button>Request a price</button>
@@ -211,7 +211,7 @@
                     <h4>1050 kg</h4>
                   </div>
                 </div>
-                <div class="products_list-item-mid-item">
+                <!-- <div class="products_list-item-mid-item">
                   <img src="images/icons/dial-svgrepo-com.svg" alt="">
   
                   <div class="products_list-item-mid-item-text">
@@ -226,9 +226,9 @@
                     <p>Bags 70 x 15 kg</p>
                     <h4>1050 kg</h4>
                   </div>
-                </div>
+                </div> -->
               </div>
-              <div class="products_list-item-mid-right">
+              <!-- <div class="products_list-item-mid-right">
                 <div class="products_list-item-mid-item">
                   <img src="images/icons/dial-svgrepo-com.svg" alt="">
   
@@ -253,7 +253,7 @@
                     <h4>1050 kg</h4>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
             <!-- <div class="products_list-item-bot">
               <button>Request a price</button>
@@ -289,7 +289,7 @@
                     <h4>1050 kg</h4>
                   </div>
                 </div>
-                <div class="products_list-item-mid-item">
+                <!-- <div class="products_list-item-mid-item">
                   <img src="images/icons/dial-svgrepo-com.svg" alt="">
   
                   <div class="products_list-item-mid-item-text">
@@ -304,9 +304,9 @@
                     <p>Bags 70 x 15 kg</p>
                     <h4>1050 kg</h4>
                   </div>
-                </div>
+                </div> -->
               </div>
-              <div class="products_list-item-mid-right">
+              <!-- <div class="products_list-item-mid-right">
                 <div class="products_list-item-mid-item">
                   <img src="images/icons/dial-svgrepo-com.svg" alt="">
   
@@ -331,7 +331,7 @@
                     <h4>1050 kg</h4>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
             <!-- <div class="products_list-item-bot">
               <button>Request a price</button>
@@ -345,84 +345,7 @@
             <a class="products-list__link" href="#">Подробнее</a>
           </div>
         </li>
-        <li class="products-list__item">
-          <div class="products_list-item">
-            <div class="products_list-item-top">
-              <div class="products_list-item-top-left">
-                <h2>Gabby</h2>
-                <p>Gabby Pellets (50% pine, 50% spruce)</p>
-                <a href="">ENplus® A1 quality - certificate ID No LV304</a>
-              </div>
-              <div class="products_list-item-top-rigth">
-                <img src="images/fn-card.png" alt="">
-              </div>
-   
-            </div>
-            <div class="products_list-item-mid">
-              <div class="products_list-item-mid-left">
-                <div class="products_list-item-mid-item">
-                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
-                  <div class="products_list-item-mid-item-text">
-                    <p>Bags 70 x 15 kg</p>
-                    <h4>1050 kg</h4>
-                  </div>
-                </div>
-                <div class="products_list-item-mid-item">
-                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
-  
-                  <div class="products_list-item-mid-item-text">
-                    <p>Bags 70 x 15 kg</p>
-                    <h4>1050 kg</h4>
-                  </div>
-                </div>
-                <div class="products_list-item-mid-item">
-                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
-  
-                  <div class="products_list-item-mid-item-text">
-                    <p>Bags 70 x 15 kg</p>
-                    <h4>1050 kg</h4>
-                  </div>
-                </div>
-              </div>
-              <div class="products_list-item-mid-right">
-                <div class="products_list-item-mid-item">
-                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
-  
-                  <div class="products_list-item-mid-item-text">
-                    <p>Bags 70 x 15 kg</p>
-                    <h4>1050 kg</h4>
-                  </div>
-                </div>
-                <div class="products_list-item-mid-item">
-                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
-  
-                  <div class="products_list-item-mid-item-text">
-                    <p>Bags 70 x 15 kg</p>
-                    <h4>1050 kg</h4>
-                  </div>
-                </div>
-                <div class="products_list-item-mid-item">
-                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
-  
-                  <div class="products_list-item-mid-item-text">
-                    <p>Bags 70 x 15 kg</p>
-                    <h4>1050 kg</h4>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- <div class="products_list-item-bot">
-              <button>Request a price</button>
-            </div> -->
-          </div>
-          <div class="products-list__bottom">
-            <div>
-              <h3 class="products-list__title">Древесные гранулы</h3>
-              <p class="products-list__price">от 220 EUR / t</p>
-            </div>
-            <a class="products-list__link" href="#">Подробнее</a>
-          </div>
-        </li>
+      
         <!-- <li class="products_list-item">
           <div class="products_list-item-top">
             <div class="products_list-item-top-left">
@@ -548,7 +471,7 @@
       <section class="section-about">
         <h2 class="title-1 section-about__title">
           <span>Почему выбирают нас?</span>
-          Нас выбирают, потому что мы делаем лучшие штучки
+          Основа вашего успешного решения
         </h2>
         <ul class="section-about__list">
           <li class="section-about__item">
@@ -578,7 +501,7 @@
               <!-- <p class="section-about__item-text">Мы дадим ответы на все ваши вопросы о продукции и ее приобретении</p> -->
             </div>
           </li>
-          <li class="section-about__item">
+          <!-- <li class="section-about__item">
             <div class="section-about__item-icon">
               <img src="images/icons/design.svg" alt="Иконка" width="39" height="39">
             </div>
@@ -586,7 +509,7 @@
               <h3 class="section-about__item-title">Индивидуальный дизайн</h3>
               <p class="section-about__item-text">Предлагаем клиентам приобрести продукцию в мешках с дизайном, разработанным Baltic Wood Trade или клиентом</p>
             </div>
-          </li>
+          </li> -->
         </ul>
       </section>
       <section class="section-cooperation">
