--- a/RTK/about.html
+++ b/RTK/about.html
@@ -121,9 +121,9 @@
           </p>
         </div>
         <div class="section-main__content-images section-main__content-images--mobile">
-          <img class="section-main__content-image" src="images/about-2.png" alt="Кактус на столе">
-          <img class="section-main__content-image" src="images/about-3.png" alt="Дервео">
-          <img class="section-main__content-image" src="images/about-4.png" alt="Лес">
+          <img class="section-main__content-image" src="images/products/photo2.jpg" alt="Кактус на столе">
+            <img class="section-main__content-image" src="images/products/photo6.jpg" alt="Дервео">
+            <img class="section-main__content-image" src="images/products/photo4.jpg" alt="Лес">
         </div>
         <div class="section-main__content-bottom">
           <p class="section-main__content-text">
@@ -136,7 +136,75 @@
       <h2 class="title-1 section-products__title">Наша продукция</h2>
       <ul class="section-proucts__list products-list">
         <li class="products-list__item">
-          <img class="products-list__img" src="images/products/product-1.png" alt="Изображение продукции">
+          <div class="products_list-item">
+            <div class="products_list-item-top">
+              <div class="products_list-item-top-left">
+                <h2>Gabby</h2>
+                <p>Gabby Pellets (50% pine, 50% spruce)</p>
+                <a href="">ENplus® A1 quality - certificate ID No LV304</a>
+              </div>
+              <div class="products_list-item-top-rigth">
+                <img src="images/fn-card.png" alt="">
+              </div>
+   
+            </div>
+            <div class="products_list-item-mid">
+              <div class="products_list-item-mid-left">
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <!-- <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div> -->
+              </div>
+              <!-- <div class="products_list-item-mid-right">
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+              </div> -->
+            </div>
+            <!-- <div class="products_list-item-bot">
+              <button>Request a price</button>
+            </div> -->
+          </div>
           <div class="products-list__bottom">
             <div>
               <h3 class="products-list__title">Древесные гранулы</h3>
@@ -146,7 +214,75 @@
           </div>
         </li>
         <li class="products-list__item">
-          <img class="products-list__img" src="images/products/product-2.png" alt="Изображение продукции">
+          <div class="products_list-item">
+            <div class="products_list-item-top">
+              <div class="products_list-item-top-left">
+                <h2>Gabby</h2>
+                <p>Gabby Pellets (50% pine, 50% spruce)</p>
+                <a href="">ENplus® A1 quality - certificate ID No LV304</a>
+              </div>
+              <div class="products_list-item-top-rigth">
+                <img src="images/fn-card.png" alt="">
+              </div>
+   
+            </div>
+            <div class="products_list-item-mid">
+              <div class="products_list-item-mid-left">
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <!-- <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div> -->
+              </div>
+              <!-- <div class="products_list-item-mid-right">
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+              </div> -->
+            </div>
+            <!-- <div class="products_list-item-bot">
+              <button>Request a price</button>
+            </div> -->
+          </div>
           <div class="products-list__bottom">
             <div>
               <h3 class="products-list__title">Древесные гранулы</h3>
@@ -156,17 +292,75 @@
           </div>
         </li>
         <li class="products-list__item">
-          <img class="products-list__img" src="images/products/product-3.png" alt="Изображение продукции">
-          <div class="products-list__bottom">
-            <div>
-              <h3 class="products-list__title">Древесные гранулы</h3>
-              <p class="products-list__price">от 220 EUR / t</p>
+          <div class="products_list-item">
+            <div class="products_list-item-top">
+              <div class="products_list-item-top-left">
+                <h2>Gabby</h2>
+                <p>Gabby Pellets (50% pine, 50% spruce)</p>
+                <a href="">ENplus® A1 quality - certificate ID No LV304</a>
+              </div>
+              <div class="products_list-item-top-rigth">
+                <img src="images/fn-card.png" alt="">
+              </div>
+   
             </div>
-            <a class="products-list__link" href="#">Подробнее</a>
+            <div class="products_list-item-mid">
+              <div class="products_list-item-mid-left">
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <!-- <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div> -->
+              </div>
+              <!-- <div class="products_list-item-mid-right">
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+                <div class="products_list-item-mid-item">
+                  <img src="images/icons/dial-svgrepo-com.svg" alt="">
+  
+                  <div class="products_list-item-mid-item-text">
+                    <p>Bags 70 x 15 kg</p>
+                    <h4>1050 kg</h4>
+                  </div>
+                </div>
+              </div> -->
+            </div>
+            <!-- <div class="products_list-item-bot">
+              <button>Request a price</button>
+            </div> -->
           </div>
-        </li>
-        <li class="products-list__item">
-          <img class="products-list__img" src="images/products/product-4.png" alt="Изображение продукции">
           <div class="products-list__bottom">
             <div>
               <h3 class="products-list__title">Древесные гранулы</h3>
